# Chimera

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONVERSATION_HISTORY.md  LICENSE  PROJECT_JOURNAL.md  QUICKSTART.md  README.md  STATUS.md  clean_comments.py  pyproject.toml
chimera/: __init__.py
chimera/attacks/: __init__.py  base.py
chimera/attacks/agentic/: __init__.py  agent_poisoning.py  memory_poisoning.py  recursive_prompt.py  reward_hacking.py  tool_chaining.py  tool_hijacking.py
chimera/attacks/llm/: __init__.py
chimera/attacks/llm/encoding/: __init__.py  base64.py  code_chameleon.py  token_smuggling.py
chimera/attacks/llm/jailbreaks/: __init__.py  artprompt.py  context_overflow.py  crescendo.py  dan.py  gcg.py  genetic_prompt.py  many_shot.py  pair.py  skeleton_key.py  tap.py  virtualization.py
chimera/attacks/llm/prompt_injection/: __init__.py  direct.py  indirect.py  multilingual.py  payload_splitting.py  system_extraction.py
chimera/attacks/ml/: __init__.py
chimera/attacks/ml/evasion/: __init__.py  cw.py  fgsm.py  pgd.py
chimera/attacks/ml/extraction/: __init__.py  model_extraction.py
chimera/attacks/ml/inversion/: __init__.py  model_inversion.py
chimera/attacks/multimodal/: __init__.py
chimera/attacks/multimodal/audio/: __init__.py  adversarial_audio.py
chimera/attacks/multimodal/vlm/: __init__.py  midas.py  semantic_chaining.py  typographic.py  visual_exclusivity.py
chimera/benchmarks/: __init__.py  report.py  runner.py
chimera/cli/: __init__.py  console.py  main.py
chimera/core/: __init__.py  attack_registry.py  exceptions.py  kernel.py  target_manager.py
chimera/discovery/: __init__.py  anomaly_detector.py  boundary_explorer.py  fuzzer.py  orchestrator.py
chimera/generation/: __init__.py  genetic_engine.py  llm_generator.py  mutator.py  pipeline.py
chimera/judges/: __init__.py  advanced_llm_judge.py  base.py  classifier_judge.py  exploit_verifier.py  keyword_judge.py  llm_judge.py
chimera/orchestrator/: __init__.py  attack_chain.py  executor.py  memory.py  multi_agent.py  planner.py
chimera/reporting/: __init__.py  mitre_owasp_mapping.py  report_generator.py
chimera/research/: __init__.py  database.py  paper_monitor.py
chimera/targets/: __init__.py  base.py  http.py  huggingface.py  ollama.py  openai_api.py  providers.py  pytorch_local.py
chimera/utils/: __init__.py  config.py  logging.py
docs/: index.md
examples/: basic_scan.py
tests/: __init__.py  test_attacks.py  test_core.py  test_targets.py
