[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chimera-ai"
version = "0.1.0"
description = "Unified AI Offensive Framework - Metasploit for AI"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Chimera Contributors", email = "chimera@example.com"}]
keywords = ["ai-security", "red-team", "adversarial-ml", "llm", "vlm", "jailbreak"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "openai>=1.0.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "tqdm>=4.65.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
    "pre-commit",
    "sphinx",
    "myst-parser",
]
ml = [
    "adversarial-robustness-toolbox>=1.15.0",
    "torchattacks>=3.5.0",
]
llm = [
    "anthropic>=0.18.0",
]

[project.scripts]
chimera = "chimera.cli.main:cli"

[tool.setuptools.packages.find]
include = ["chimera*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
