[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chimera-ai"
version = "1.0.0"
description = "AI red teaming framework"
readme = "README.md"
license = "Apache-2.0"
authors = [{name = "MrETL (Dilnessa Aemro)"}]
keywords = ["ai-security", "red-team", "llm", "jailbreak", "adversarial"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "tqdm>=4.65.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
llm = [
    "openai>=1.0.0",
    "anthropic>=0.20.0",
]
local = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
    "pillow>=10.0.0",
]
ml = [
    "torch>=2.0.0",
    "adversarial-robustness-toolbox>=1.15.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
]
audio = [
    "torch>=2.0.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov",
    "ruff",
    "mypy",
]
all = [
    "chimera-ai[llm,local,ml,audio]",
]

[project.scripts]
chimera = "chimera.cli.main:cli"

[tool.setuptools.packages.find]
include = ["chimera*"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
